atualizando codigos e efeito scroll

--- a/index.html
+++ b/index.html
@@ -120,7 +120,27 @@
 
   <!-- start box Sobre  -->
   <div id="sobre"></div>
-  <div class="sobre" >
+  <div class="sobre">
+    <div class="sobre-box">
+      <h1 id="sobre">Sobre a empresa</h1>
+      <p id="sobre">
+      <i> <span> Em Janeiro de 2022 a DEEP CODE iniciou as suas atividades. </span></i> Pequena e nova no mercado, a conquista dos primeiros clientes se deu através de um atendimento singular e personalizado. Sempre preocupados com a satisfação de nossos clientes, conquistamos cada vez mais reconhecimento no mercado.
+        Tivemos muita dedicação para construir uma empresa sólida e diferenciada em um mercado altamente competitivo.
+      </p>
+      <p id="sobre">
+        O crescimento trouxe a maturidade empresarial e, com o foco sempre no cliente, consolidamos os diferenciais estratégicos nos quais embasamos a nossa filosofia de trabalho: Transparência, Agilidade, Flexibilidade e Custos Competitivos.
+      </p>
+      <p id="sobre">
+        Muito além de oferecermos Objetividade, Flexibilidade, Dinamismo e Experiência, acreditamos no poder transformador da tecnologia para revolucionar os negócios e na capacidade de nossos talentos para potencializar esta transformação digital.        
+      </p>
+      <p id="sobre">
+        Aos que fazem, ou fizeram, parte dessa história, nosso muito obrigado pela parceria. <i> <span>Aos que chegam agora, sejam muito bem-vindos.</span> </i>
+      </p>
+
+      <a href="sobre.html">
+        <h2 id="sobre">Ler Mais...</h2>
+      </a>
+    </div>
 
   </div>
   <!-- the end box Sobre -->
