arrumando bug de link

--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
       <div class="OqueFazemos-img-esquerda">
         <h1 id="OqueFazemos-lista">Como podemos te ajudar?</h1>
 
-        <a href="https://pigsx.github.io/storm/">
-          <h3 id="OqueFazemos-lista">fazer orçamento</h3>
-        </a>
+          <h3 id="OqueFazemos-lista"><a href="https://pigsx.github.io/storm/">fazer orçamento</a></h3>
 
       </div>
       <div class="OqueFazemos-img-direita">
@@ -137,9 +135,7 @@
         Aos que fazem, ou fizeram, parte dessa história, nosso muito obrigado pela parceria. <i> <span>Aos que chegam agora, sejam muito bem-vindos.</span> </i>
       </p>
 
-      <a href="sobre.html">
-        <h2 id="sobre">Ler Mais...</h2>
-      </a>
+        <h2 id="sobre"><a href="sobre.html">Ler Mais...</a></h2>      
     </div>
 
   </div>
