--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="OqueFazemos-img-esquerda">
         <h1 id="OqueFazemos-lista">Como podemos te ajudar?</h1>
 
-          <h3 id="OqueFazemos-lista"><a href="https://pigsx.github.io/storm/">fazer orçamento</a></h3>
+          <h3 id="OqueFazemos-lista">fazer orçamento</h3>
 
       </div>
       <div class="OqueFazemos-img-direita">
