--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/scrollreveal"></script>
+
+
   <link rel="stylesheet" href="style.css">
+ 
+
+ 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
@@ -16,6 +21,8 @@
 
 <body>
 
+
+  <!-- Start menu navegation -->
 
     <div class="nav-fixo">  
   <nav id="nav">
@@ -35,6 +42,8 @@
     </ul>
   </nav>
   </div> 
+
+  <!-- The end menu navegation -->
 
   <!-- Quem Somos start box -->
   <div class="conteudo-quemSomos" id="quemSomos">
@@ -134,6 +143,8 @@
   <div id="cases"></div>
   <div class="case">
 
+   
+
   </div>
 
   <!-- The end case -->
@@ -154,26 +165,26 @@
         <div class="icons" id="contato">
           <div class="face-icon">
             <a href="#">
-              <img src="imagens/facebrank.png" alt="" height="60%" width="100%">
+              <img src="imagens/facebrank.png" alt="" height="100%" width="80%">
             </a>
 
           </div>
 
           <div class="whats-icon">
             <a href="#">
-              <img src="imagens/whatsbranco.png" alt="" height="60%" width="100%">
+              <img src="imagens/whatsbranco.png" alt="" height="100%" width="80%">
             </a>
           </div>
 
 
           <div class="github-icon">
             <a href="https://github.com/01Vitorhugo">
-              <img src="imagens/gitbranc.png" alt="" height="60%" width="100%">
+              <img src="imagens/gitbranc.png" alt="" height="100%" width="80%">
             </a>
           </div>
           <div class="linkedin-icon">
             <a href="#">
-              <img src="imagens/brakedin.png" alt="" height="60%" width="100%">
+              <img src="imagens/brakedin.png" alt="" height="100%" width="80%">
             </a>
           </div>
 
@@ -198,7 +209,6 @@
 
 
   <script src="script.js"></script>
-
 
 </body>
 
