--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="OqueFazemos-img-esquerda">
         <h1 id="OqueFazemos-lista">Como podemos te ajudar?</h1>
 
-          <h3 id="OqueFazemos-lista"><a href="#">fazer orçamento</a></h3>
+          <h3 id="OqueFazemos-lista"><a href="orcamento.html">fazer orçamento</a></h3>
 
       </div>
       <div class="OqueFazemos-img-direita">
