ajustando pagina er

--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
   <div class="contato" >
     <div class="contato-esquerda" >
       <h1 id="contato">São Paulo</h1>
-      <h3 id="contato">rua baltazar nunes 600</h3>
-      <h3 id="contato">são paulo (sp) - 08290220</h3>
+      <h3 id="contato">Rua Virgínia Ferni</h3>
+      <h3 id="contato">São Paulo (sp) - 0825300</h3>
 
       <h1 id="contato">Fale conosco</h1>
-    <h3 id="contato">contato@deepcode.com.br</h3>
-    <h3 id="contato"><strong>tel:</strong> (11)20693874</h3>
+    <h3 id="contato">CRIAR EMAIL DA EMPRESA</h3>
+    <h3 id="contato"><strong>tel:</strong> (11)22547627</h3>
 
         <div class="icons" id="contato">
           <div class="face-icon">
@@ -193,10 +193,9 @@
 
   </div>
   <div class="contato-direita" id="contato">
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.346747392078!2d-46.44963268535603!3d-23.55598686727808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce6686418fde3b%3A0x98988bd5894e8268!2sR.%20Baltazar%20Nunes%2C%20600%20-%20Vila%20Carmosina%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008290-220!5e0!3m2!1spt-BR!2sbr!4v1667070621752!5m2!1spt-BR!2sbr"
-      width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.595787126375!2d-46.440942985022424!3d-23.547036484689993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce6427fe3f5b23%3A0x54b863d343c81f8f!2sEtec%20Itaquera!5e0!3m2!1spt-BR!2sbr!4v1668201716060!5m2!1spt-BR!2sbr"
+     width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+     </iframe>
   </div>
 
   </div>
