pagina de agradecimento

--- a/thanks.html
+++ b/thanks.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="thanks.css">
+    <title>DEEP CODE</title>
 </head>
 <body>
+    <div class="conteudo">
+        <div class="topo"></div>
+
+        <div class="baixo">
+            <h1>Obrigado!</h1>
+
+            <h2>Entraremos em contato brevemente.</h2>
+
+            <h1 class="link"><a href="index.html">Voltar</a></h1>
+        </div>
+
+    </div>
     
 </body>
 </html>
