--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/scrollreveal"></script>
-
-
   <link rel="stylesheet" href="style.css">
- 
-
- 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
@@ -115,7 +110,7 @@
       <div class="OqueFazemos-img-esquerda">
         <h1 id="OqueFazemos-lista">Como podemos te ajudar?</h1>
 
-          <h3 id="OqueFazemos-lista"><a href="orcamento.html">fazer orçamento</a></h3>
+          <h3 id="OqueFazemos-lista"><a href="form.html">fazer orçamento</a></h3>
 
       </div>
       <div class="OqueFazemos-img-direita">
@@ -143,9 +138,14 @@
   <div id="cases"></div>
   <div class="case">
 
+    
    
-
   </div>
+
+
+    
+
+ 
 
   <!-- The end case -->
  
@@ -208,6 +208,7 @@
 
 
   <script src="script.js"></script>
+
 
 </body>
 
