--- a/form.html
+++ b/form.html
@@ -5,29 +5,30 @@
     <link rel="stylesheet" href="form.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orçamento DEEP CODE</title>
+    <title>orçamento DEEP CODE</title>
 </head>
 <body>
-
+  
     <div class="form-cont">
+       
         <div class="left"> </div>
         <div class="right">
-            <form action="https://formsubmit.co/vitorhugo0031@outlook.com" method="post">
+            <form action="https://formsubmit.co/Vitorhugo0031@outlook.com" method="post">
                 <div class="formu">
-                <label for="">Nome</label>
-                <input type="text" name="name" required>
+                <p id="txt"><label for="">Nome:</label></p>
+                <p><input type="text" name="name" required></p>
 
-                <label for="">E-mail</label>
-                <input type="email" name="email" required>  
+                <p id="txt"><label for="">E-mail:</label></p>
+                <p><input type="email" name="email" required>  </p>
 
-                <label for="">Telefone</label>
-                <input type="tel" name="telefone" id="">
+                <p id="txt"><label for="">Telefone:</label></p>
+                <p><input type="tel" name="telefone" id=""></p>
 
-
-                <textarea name="" id="" cols="60" rows="10"></textarea>
-                <input type="hidden" name="_autoresponse" value="Obrigado por entrar em contato">  
-                <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html"> 
-                <button type="submit">Enviar</button>
+                <p id="txt">Assunto:</p>
+                <p><textarea name="" id="" cols="35" rows="10"></textarea></p>
+                <p><input type="hidden" name="_autoresponse" value="Obrigado por entrar em contato">  </p>
+                <p><input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html"> </p>
+                <p><button type="submit">ENVIAR</button></p>
 
                 </div>
 
