--- a/orcamento.html
+++ b/orcamento.html
@@ -25,7 +25,7 @@
                 <p><input type="tel" name="telefone" id=""></p>
 
                 <p id="txt">Assunto:</p>
-                <p><input type="text" name="" id=""></p>
+                <p><input type="text" name="" required></p>
                 <input type="hidden" name="_autoresponse" value="Obrigado por entrar em contato">
         <input type="hidden" name="_next" value="https://127.0.0.1:5500/thanks.html">
                 <button type="submit">ENVIAR</button>
