--- a/orcamento.html
+++ b/orcamento.html
@@ -24,8 +24,8 @@
                 <p id="txt"><label for="">Telefone:</label></p>
                 <p><input type="tel" name="telefone" id=""></p>
 
-                <p id="txt">Assunto:</p>
-                <p><input type="text" name="name" required></p>
+                <p id="txt"><label for="">Assunto:</label></p>
+                <p><input type="text" name="assunto" required></p>
                 <input type="hidden" name="_autoresponse" value="Obrigado por entrar em contato">
         <input type="hidden" name="_next" value="https://127.0.0.1:5500/thanks.html">
                 <button type="submit">ENVIAR</button>
