--- a/orcamento.html
+++ b/orcamento.html
@@ -26,8 +26,8 @@
 
                 <p id="txt"><label for="">Assunto:</label></p>
                 <p><input type="text" name="assunto" required></p>
-                <input type="hidden" name="_autoresponse" value="Obrigado por entrar em contato">
-        <input type="hidden" name="_next" value="https://127.0.0.1:5500/thanks.html">
+
+                <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
                 <button type="submit">ENVIAR</button>
                 </div>
 
