--- a/index.html
+++ b/index.html
@@ -138,7 +138,23 @@
   <div id="cases"></div>
   <div class="case">
 
-    
+    <div class="carrossel">
+
+      <div class="container" id="img">
+
+        <img src="imagens/membro1.jpeg" alt="" height="100%" width="50%">
+        <img src="imagens/logo.png" alt=""  height="100%" width="50%">
+        <img src="imagens/brakedin.png" alt=""  height="100%" width="50%">
+        <img src="imagens/facebrank.png" alt=""  height="100%" width="50%">
+        <img src="imagens/img-sobre1.jpg" alt=""  height="100%" width="50%">
+        <img src="imagens/Logo Deep Code.png" alt=""  height="100%" width="50%">
+        <img src="imagens/whatsbranco.png" alt=""  height="100%" width="50%">
+        <img src="imagens/logo.png" alt=""  height="100%" width="50%">
+
+      </div>
+
+    </div>
+
    
   </div>
 
