--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  
   <title>DEEP CODE</title>
 </head>
 
@@ -142,20 +143,17 @@
 
       <div class="container" id="img">
 
-        <img src="imagens/membro1.jpeg" alt="" height="100%" width="50%">
-        <img src="imagens/logo.png" alt=""  height="100%" width="50%">
-        <img src="imagens/brakedin.png" alt=""  height="100%" width="50%">
-        <img src="imagens/facebrank.png" alt=""  height="100%" width="50%">
-        <img src="imagens/img-sobre1.jpg" alt=""  height="100%" width="50%">
-        <img src="imagens/Logo Deep Code.png" alt=""  height="100%" width="50%">
-        <img src="imagens/whatsbranco.png" alt=""  height="100%" width="50%">
-        <img src="imagens/logo.png" alt=""  height="100%" width="50%">
+        <img src="img/1.png"     alt="" height="100%" width="100%" >
+        <img src="img/2.png"     alt="" height="100%" width="100%" >
+        <img src="img/3.png"     alt="" height="100%" width="100%" >
+        <img src="img/4.png"     alt="" height="100%" width="100%"  >
+        <img src="img/5.png"     alt="" height="100%" width="100%" >
+        <img src="img/6.png"     alt="" height="100%" width="100%" >
+        <img src="img/7.png"     alt="" height="100%" width="100%" >
+        <img src="img/8.png"     alt="" height="100%" width="100%" >
 
       </div>
-
-    </div>
-
-   
+  </div>
   </div>
 
 
