--- a/orcamento.html
+++ b/orcamento.html
@@ -26,7 +26,7 @@
 
                 <p id="txt"><label for="">Assunto:</label></p>
                 <p><input type="text" name="assunto" required></p>
-                <input type="hidden" name="_next" value="https://github.com/01Vitorhugo/Deep-Code/thanks.html">
+                <input type="hidden" name="_next" value="https://01vitorhugo.github.io/Deep-Code/thanks.html">
                 <button type="submit">ENVIAR</button>
                 </div>
 
