--- a/index.html
+++ b/index.html
@@ -143,14 +143,17 @@
 
       <div class="container" id="img">
 
-        <img src="img/1.png"     alt="" height="100%" width="100%" >
-        <img src="img/2.png"     alt="" height="100%" width="100%" >
-        <img src="img/3.png"     alt="" height="100%" width="100%" >
-        <img src="img/4.png"     alt="" height="100%" width="100%"  >
-        <img src="img/5.png"     alt="" height="100%" width="100%" >
-        <img src="img/6.png"     alt="" height="100%" width="100%" >
-        <img src="img/7.png"     alt="" height="100%" width="100%" >
-        <img src="img/8.png"     alt="" height="100%" width="100%" >
+        <img src="img/foto1.jpeg"     alt="" height="100%" width="100%">
+        <img src="img/foto2.jpeg"     alt="" height="100%" width="100%">
+        <img src="img/foto3.jpeg"     alt="" height="100%" width="100%">
+        <img src="img/foto4.jpeg"     alt="" height="100%" width="100%">
+        <img src="img/foto5.jpeg"     alt="" height="100%" width="100%">
+        <img src="img/foto11.jpeg"     alt="" height="100%" width="100%">
+        <img src="img/foto6.jpeg"     alt="" height="100%" width="100%">
+        <img src="img/foto7.jpeg"     alt="" height="100%" width="100%">
+        <img src="img/foto8.jpeg"     alt="" height="100%" width="100%">
+        <img src="img/foto9.jpeg"     alt="" height="100%" width="100%">
+        <img src="img/foto10.jpeg"     alt="" height="100%" width="100%">
 
       </div>
   </div>
