--- a/orcamento.html
+++ b/orcamento.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="orcamento.css">
+    <link rel="stylesheet" href="css/orcamento.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>orçamento DEEP CODE</title>
