--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="imagens/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="sobre.css">
+    <link rel="stylesheet" href="css/sobre.css">
     <title>Sobre DEEP CODE 2022</title>
 </head>
 <body>
