--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
     
     <div class="OqueFazemos-img">
       <div class="OqueFazemos-img-esquerda">
+        <figure id="figure">
+          <img src="imagens/contratorosa.png" alt="">
+            </figure>
         <h1 id="OqueFazemos-lista">Como podemos te ajudar?</h1>
 
           <h3 id="OqueFazemos-lista"><a href="orcamento.html">fazer orçamento</a></h3>
@@ -136,13 +139,9 @@
 
 
   <!-- Start case -->
-  <div id="cases"></div>
   <div class="case">
-
     <div class="carrossel">
-
       <div class="container" id="img">
-
         <img src="img/foto1.jpeg"     alt="" height="100%" width="100%">
         <img src="img/foto2.jpeg"     alt="" height="100%" width="100%">
         <img src="img/foto3.jpeg"     alt="" height="100%" width="100%">
@@ -154,16 +153,9 @@
         <img src="img/foto8.jpeg"     alt="" height="100%" width="100%">
         <img src="img/foto9.jpeg"     alt="" height="100%" width="100%">
         <img src="img/foto10.jpeg"     alt="" height="100%" width="100%">
-
       </div>
+    </div>
   </div>
-  </div>
-
-
-    
-
- 
-
   <!-- The end case -->
  
 
@@ -184,7 +176,6 @@
             <a href="#">
               <img src="imagens/facebrank.png" alt="" height="100%" width="80%">
             </a>
-
           </div>
 
           <div class="whats-icon">
@@ -192,7 +183,6 @@
               <img src="imagens/whatsbranco.png" alt="" height="100%" width="80%">
             </a>
           </div>
-
 
           <div class="github-icon">
             <a href="https://github.com/01Vitorhugo">
@@ -207,7 +197,6 @@
 
     </div>
 
-
   </div>
   <div class="contato-direita" id="contato">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.595787126375!2d-46.440942985022424!3d-23.547036484689993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce6427fe3f5b23%3A0x54b863d343c81f8f!2sEtec%20Itaquera!5e0!3m2!1spt-BR!2sbr!4v1668201716060!5m2!1spt-BR!2sbr"
@@ -220,13 +209,10 @@
   <!-- the end Contato -->
 
 
-
-
-
-
   <script src="script.js"></script>
 
 
 </body>
 
 </html>
+
