--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <!-- Quem Somos start box -->
   <div class="conteudo-quemSomos" id="quemSomos">
-    <div class="foto-logo"></div>
+    <div class="foto-logo"> <img src="imagens/fotologo.png" height="100%" width="80%"></div>
     <div class="foto-logo-txt" id="logo-texto">
 
       <i>
