--- a/sobre.html
+++ b/sobre.html
@@ -26,7 +26,7 @@
 
   
     <div class="historia" >
-        <div class="logo-historia"></div>
+        <div class="logo-historia"> <img src="imagens/fotologo.png" height="50%" width="50%"></div>
         <div class="conteudo-historia">
           <h1 id="historia">2022 O COMEÇO..</h1>
 
