--- a/index.html
+++ b/index.html
@@ -7,127 +7,143 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/scrollreveal"></script>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/query-style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
   <title>DEEP CODE</title>
 </head>
 
 <body>
-
-
   <!-- Start menu navegation -->
-
-    <div class="nav-fixo">  
-  <nav id="nav">
-    <ul>
-      <a href="#quemSomos">
-        <li>QUEM SOMOS</li>
-      </a>
-      <a href="#OqueFazemos">
-        <li>O QUE FAZEMOS</li>
-      </a>
-      <a href="#cases">
-        <li>CASES</li>
-      </a>
-      <a href="#contato">
-        <li>CONTATO</li>
-      </a>
-    </ul>
-  </nav>
-  </div> 
+  <div class="nav-fixed">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-lignt">
+      <div class="container-fluid">
+        <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon "></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#sobre">QUEM-SOMOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#OqueFazemos">O QUE FAZEMOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#case">CASES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contato">CONTATO</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
 
   <!-- The end menu navegation -->
 
   <!-- Quem Somos start box -->
   <div class="conteudo-quemSomos" id="quemSomos">
-    <div class="foto-logo"> <img src="imagens/fotologo.png" height="100%" width="80%"></div>
-    <div class="foto-logo-txt" id="logo-texto">
-
-      <i>
-        <p class="p-1" id="p-logo-texto" >
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At modi odit fuga reprehenderit
-          illum, dignissimos mollitia sit placeat, eaque optio maiores vero deleniti quia libero illo consequatur
-          corrupti sequi dolore.
-        </p>
-      </i>
-      <i>
-        <p class="p-2" id="p-logo-texto">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At modi odit fuga reprehenderit
-          illum, dignissimos mollitia sit placeat, eaque optio maiores vero deleniti quia libero illo consequatur
-          corrupti sequi dolore.
-        </p>
-      </i>
-      <i>
-        <p class="p-3" id="p-logo-texto">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At modi odit fuga reprehenderit
-          illum, dignissimos mollitia sit placeat, eaque optio maiores vero deleniti quia libero illo consequatur
-          corrupti sequi dolore.
-        </p>
-      </i>
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="img/img-slide1.png" class="d-block w-100" alt="">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="img/img-slide2.png" class="d-block w-100" alt="">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="img/img-slide3.png" class="d-block w-100" alt="">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
+
   </div>
 
-  <div class="quemSomos-rodape" >
-    <h2 id="logo-texto">
-      DEEP CODE 2022
-    </h2>
-  </div>
 
   <!-- Quem Somos the end box -->
 
- <!-- start box Sobre  -->
- <div id="sobre"></div>
- <div class="sobre">
-   <div class="sobre-box">
-     <h1 id="sobre">Sobre a empresa</h1>
-     <p id="sobre">
-     <i> <span> Em Janeiro de 2022 a DEEP CODE iniciou as suas atividades. </span></i> Pequena e nova no mercado, a conquista dos primeiros clientes se deu através de um atendimento singular e personalizado. Sempre preocupados com a satisfação de nossos clientes, conquistamos cada vez mais reconhecimento no mercado.
-       Tivemos muita dedicação para construir uma empresa sólida e diferenciada em um mercado altamente competitivo.
-     </p>
-     <p id="sobre">
-       O crescimento trouxe a maturidade empresarial e, com o foco sempre no cliente, consolidamos os diferenciais estratégicos nos quais embasamos a nossa filosofia de trabalho: Transparência, Agilidade, Flexibilidade e Custos Competitivos.
-     </p>
-     <p id="sobre">
-       Muito além de oferecermos Objetividade, Flexibilidade, Dinamismo e Experiência, acreditamos no poder transformador da tecnologia para revolucionar os negócios e na capacidade de nossos talentos para potencializar esta transformação digital.        
-     </p>
-     <p id="sobre">
-       Aos que fazem, ou fizeram, parte dessa história, nosso muito obrigado pela parceria. <i> <span>Aos que chegam agora, sejam muito bem-vindos.</span> </i>
-     </p>
+  <!-- start box Sobre  -->
+  <div id="sobre"></div>
+  <div class="sobre">
+    <div class="sobre-box">
+      <h1 id="sobre">Sobre a empresa</h1>
+      <p id="sobre">
+        <i> <span> Em Janeiro de 2022 a DEEP CODE iniciou as suas atividades. </span></i> Pequena e nova no mercado, a
+        conquista dos primeiros clientes se deu através de um atendimento singular e personalizado. Sempre preocupados
+        com a satisfação de nossos clientes, conquistamos cada vez mais reconhecimento no mercado.
+        Tivemos muita dedicação para construir uma empresa sólida e diferenciada em um mercado altamente competitivo.
+      </p>
+      <p id="sobre">
+        O crescimento trouxe a maturidade empresarial e, com o foco sempre no cliente, consolidamos os diferenciais
+        estratégicos nos quais embasamos a nossa filosofia de trabalho: Transparência, Agilidade, Flexibilidade e Custos
+        Competitivos.
+      </p>
+      <p id="sobre">
+        Muito além de oferecermos Objetividade, Flexibilidade, Dinamismo e Experiência, acreditamos no poder
+        transformador da tecnologia para revolucionar os negócios e na capacidade de nossos talentos para potencializar
+        esta transformação digital.
+      </p>
+      <p id="sobre">
+        Aos que fazem, ou fizeram, parte dessa história, nosso muito obrigado pela parceria. <i> <span>Aos que chegam
+            agora, sejam muito bem-vindos.</span> </i>
+      </p>
 
-       <h2 id="sobre"><a href="sobre.html">Ler Mais...</a></h2>      
-   </div>
+      <h2 id="sobre"><a href="sobre.html">Ler Mais...</a></h2>
+    </div>
 
- </div>
- <!-- the end box Sobre -->
+  </div>
+  <!-- the end box Sobre -->
 
   <!-- O que fazemos start box -->
   <div id="OqueFazemos"></div>
   <div class="conteudo-OqueFazemos">
-    
     <div class="OqueFazemos-img">
       <div class="OqueFazemos-img-esquerda">
         <figure id="figure">
           <img src="imagens/contratorosa.png" alt="">
-            </figure>
+        </figure>
         <h1 id="OqueFazemos-lista">Como podemos te ajudar?</h1>
 
-          <h3 id="OqueFazemos-lista"><a href="orcamento.html">fazer orçamento</a></h3>
+        <h3 id="OqueFazemos-lista"><a href="orcamento.html">fazer orçamento</a></h3>
 
       </div>
       <div class="OqueFazemos-img-direita">
         <ul>
-          <li id="OqueFazemos-lista"><h2>Desenvolvimento Web</h2></li>
-          <li id="OqueFazemos-lista"><h2>Desenvolvimento de Mobile</h2></li>
-          <li id="OqueFazemos-lista"><h2>Desenvolvimento de Software</h2></li>
-          <li id="OqueFazemos-lista"><h2>Manutenção de Sistemas</h2></li>
+          <li id="OqueFazemos-lista">
+            <h2>Desenvolvimento Web</h2>
+          </li>
+          <li id="OqueFazemos-lista">
+            <h2>Desenvolvimento de Mobile</h2>
+          </li>
+          <li id="OqueFazemos-lista">
+            <h2>Desenvolvimento de Software</h2>
+          </li>
+          <li id="OqueFazemos-lista">
+            <h2>Manutenção de Sistemas</h2>
+          </li>
         </ul>
 
 
       </div>
-      
+
     </div>
 
   </div>
@@ -139,80 +155,86 @@
 
 
   <!-- Start case -->
+  <div id="case"></div>
   <div class="case">
     <div class="carrossel">
       <div class="container" id="img">
-        <img src="img/foto1.jpeg"     alt="" height="100%" width="100%">
-        <img src="img/foto2.jpeg"     alt="" height="100%" width="100%">
-        <img src="img/foto3.jpeg"     alt="" height="100%" width="100%">
-        <img src="img/foto4.jpeg"     alt="" height="100%" width="100%">
-        <img src="img/foto5.jpeg"     alt="" height="100%" width="100%">
-        <img src="img/foto11.jpeg"     alt="" height="100%" width="100%">
-        <img src="img/foto6.jpeg"     alt="" height="100%" width="100%">
-        <img src="img/foto7.jpeg"     alt="" height="100%" width="100%">
-        <img src="img/foto8.jpeg"     alt="" height="100%" width="100%">
-        <img src="img/foto9.jpeg"     alt="" height="100%" width="100%">
-        <img src="img/foto10.jpeg"     alt="" height="100%" width="100%">
+        <img src="img/foto1.jpeg" alt="" height="100%" width="100%">
+        <img src="img/foto2.jpeg" alt="" height="100%" width="100%">
+        <img src="img/foto3.jpeg" alt="" height="100%" width="100%">
+        <img src="img/foto4.jpeg" alt="" height="100%" width="100%">
+        <img src="img/foto5.jpeg" alt="" height="100%" width="100%">
+        <img src="img/foto11.jpeg" alt="" height="100%" width="100%">
+        <img src="img/foto6.jpeg" alt="" height="100%" width="100%">
+        <img src="img/foto7.jpeg" alt="" height="100%" width="100%">
+        <img src="img/foto8.jpeg" alt="" height="100%" width="100%">
+        <img src="img/foto9.jpeg" alt="" height="100%" width="100%">
+        <img src="img/foto10.jpeg" alt="" height="100%" width="100%">
       </div>
     </div>
   </div>
   <!-- The end case -->
- 
+
 
   <!-- Start Contato -->
   <div id="contato"></div>
-  <div class="contato" >
-    <div class="contato-esquerda" >
+  <div class="contato">
+    <div class="contato-esquerda">
       <h1 id="contato">São Paulo</h1>
       <h3 id="contato">Rua Virgínia Ferni</h3>
       <h3 id="contato">São Paulo (sp) - 0825300</h3>
 
       <h1 id="contato">Fale conosco</h1>
-    <h3 id="contato">CRIAR EMAIL DA EMPRESA</h3>
-    <h3 id="contato"><strong>tel:</strong> (11)22547627</h3>
+      <h3 id="contato">CRIAR EMAIL DA EMPRESA</h3>
+      <h3 id="contato"><strong>tel:</strong> (11)22547627</h3>
 
-        <div class="icons" id="contato">
-          <div class="face-icon">
-            <a href="#">
-              <img src="imagens/facebrank.png" alt="" height="100%" width="80%">
-            </a>
-          </div>
+      <div class="icons" id="contato">
+        <div class="face-icon">
+          <a href="#">
+            <img src="imagens/facebrank.png" alt="" height="100%" width="80%">
+          </a>
+        </div>
 
-          <div class="whats-icon">
-            <a href="#">
-              <img src="imagens/whatsbranco.png" alt="" height="100%" width="80%">
-            </a>
-          </div>
+        <div class="whats-icon">
+          <a href="#">
+            <img src="imagens/whatsbranco.png" alt="" height="100%" width="80%">
+          </a>
+        </div>
 
-          <div class="github-icon">
-            <a href="https://github.com/01Vitorhugo">
-              <img src="imagens/gitbranc.png" alt="" height="100%" width="80%">
-            </a>
-          </div>
-          <div class="linkedin-icon">
-            <a href="#">
-              <img src="imagens/brakedin.png" alt="" height="100%" width="80%">
-            </a>
-          </div>
+        <div class="github-icon">
+          <a href="https://github.com/01Vitorhugo">
+            <img src="imagens/gitbranc.png" alt="" height="100%" width="80%">
+          </a>
+        </div>
+        <div class="linkedin-icon">
+          <a href="#">
+            <img src="imagens/brakedin.png" alt="" height="100%" width="80%">
+          </a>
+        </div>
 
+      </div>
+
+    </div>
+    <div class="contato-direita" id="contato">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.595787126375!2d-46.440942985022424!3d-23.547036484689993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce6427fe3f5b23%3A0x54b863d343c81f8f!2sEtec%20Itaquera!5e0!3m2!1spt-BR!2sbr!4v1668201716060!5m2!1spt-BR!2sbr"
+        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </iframe>
     </div>
 
   </div>
-  <div class="contato-direita" id="contato">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.595787126375!2d-46.440942985022424!3d-23.547036484689993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce6427fe3f5b23%3A0x54b863d343c81f8f!2sEtec%20Itaquera!5e0!3m2!1spt-BR!2sbr!4v1668201716060!5m2!1spt-BR!2sbr"
-     width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-     </iframe>
-  </div>
 
-  </div>
-  <div id="sobre"></div>
   <!-- the end Contato -->
 
 
   <script src="script.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+
 
 </body>
 
 </html>
-
