--- a/sobre.html
+++ b/sobre.html
@@ -10,17 +10,36 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="imagens/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/sobre.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Sobre DEEP CODE 2022</title>
 </head>
 <body>
 
   <div class="nav-fixo">  
-    <nav id="nav">
-      <ul>
-        <a href="index.html">
-          <li>HOME</li>
-        </a>
-      </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-lignt">
+      <div class="container-fluid">
+        <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon "></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#sobre">QUEM-SOMOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#OqueFazemos">O QUE FAZEMOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#case">CASES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contato">CONTATO</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
     </div> 
 
@@ -65,6 +84,10 @@
    
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+
 
     
     
