--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="#OqueFazemos">O QUE FAZEMOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#case">CASES</a>
+              <a class="nav-link" href="#case">PROJETOS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contato">CONTATO</a>
