--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/scrollreveal"></script>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/query-style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
-  <title>DEEP CODE</title>
+    <title>DEEP CODE</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/query-style.css">
 </head>
 
 <body>
@@ -84,7 +83,7 @@
   <div id="sobre"></div>
   <div class="sobre">
     <div class="sobre-box">
-      <h1 id="sobre">Sobre a empresa</h1>
+      <h1 class="sb">Sobre a empresa</h1>
       <p id="sobre">
         <i> <span> Em Janeiro de 2022 a DEEP CODE iniciou as suas atividades. </span></i> Pequena e nova no mercado, a
         conquista dos primeiros clientes se deu através de um atendimento singular e personalizado. Sempre preocupados
@@ -102,11 +101,11 @@
         esta transformação digital.
       </p>
       <p id="sobre">
-        Aos que fazem, ou fizeram, parte dessa história, nosso muito obrigado pela parceria. <i> <span>Aos que chegam
+        Aos que fazem, ou fizeram, parte dessa história, nosso muito obrigado pela parceria. <i> <span id="aos">Aos que chegam
             agora, sejam muito bem-vindos.</span> </i>
       </p>
 
-      <h2 id="sobre"><a href="sobre.html">Ler Mais...</a></h2>
+      <h2 id="sobre" class="ler"><a href="sobre.html">Ler Mais...</a></h2>
     </div>
 
   </div>
@@ -118,11 +117,11 @@
     <div class="OqueFazemos-img">
       <div class="OqueFazemos-img-esquerda">
         <figure id="figure">
-          <img src="imagens/contratorosa.png" alt="">
+          <img id="contrato" src="imagens/contratorosa.png" alt="">
         </figure>
-        <h1 id="OqueFazemos-lista">Como podemos te ajudar?</h1>
+        <h1 id="OqueFazemos-lista" class="dif"    >Como podemos te ajudar?</h1>
 
-        <h3 id="OqueFazemos-lista"><a href="orcamento.html">fazer orçamento</a></h3>
+        <h3 id="OqueFazemos-lista" class="dif" >  <a href="orcamento.html">fazer orçamento</a></h3>
 
       </div>
       <div class="OqueFazemos-img-direita">
@@ -188,25 +187,25 @@
       <h3 id="contato">CRIAR EMAIL DA EMPRESA</h3>
       <h3 id="contato"><strong>tel:</strong> (11)22547627</h3>
 
-      <div class="icons" id="contato">
-        <div class="face-icon">
+      <div class="icons" id="contato"  >
+        <div class="face-icon" id="imgs">
           <a href="#">
             <img src="imagens/facebrank.png" alt="" height="100%" width="80%">
           </a>
         </div>
 
-        <div class="whats-icon">
+        <div class="whats-icon"  id=" ">
           <a href="#">
             <img src="imagens/whatsbranco.png" alt="" height="100%" width="80%">
           </a>
         </div>
 
-        <div class="github-icon">
+        <div class="github-icon"  id="imgs">
           <a href="https://github.com/01Vitorhugo">
             <img src="imagens/gitbranc.png" alt="" height="100%" width="80%">
           </a>
         </div>
-        <div class="linkedin-icon">
+        <div class="linkedin-icon"  id="imgs">
           <a href="#">
             <img src="imagens/brakedin.png" alt="" height="100%" width="80%">
           </a>
