ultimos ajustes no projeto

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         <figure id="figure">
           <img id="contrato" src="imagens/contratorosa.png" alt="">
         </figure>
-        <h1 id="OqueFazemos-lista" class="dif"    >Como podemos te ajudar?</h1>
+        <h1 id="OqueFazemos-lista" class="dif">Como podemos te ajudar?</h1>
 
-        <h3 id="OqueFazemos-lista" class="dif" >  <a href="orcamento.html">fazer orçamento</a></h3>
+        <h3 id="OqueFazemos-lista" class="dif"><a href="orcamento.html">fazer orçamento</a></h3>
 
       </div>
       <div class="OqueFazemos-img-direita">
@@ -135,9 +135,9 @@
           <li id="OqueFazemos-lista">
             <h2>Desenvolvimento de Software</h2>
           </li>
-          <li id="OqueFazemos-lista">
+          <!-- <li id="OqueFazemos-lista">
             <h2>Manutenção de Sistemas</h2>
-          </li>
+          </li> -->
         </ul>
 
 
@@ -189,13 +189,13 @@
 
       <div class="icons" id="contato"  >
         <div class="face-icon" id="imgs">
-          <a href="#">
+          <a href=" https://www.facebook.com/etecdeitaquera">
             <img src="imagens/facebrank.png" alt="" height="100%" width="80%">
           </a>
         </div>
 
         <div class="whats-icon"  id=" ">
-          <a href="#">
+          <a href=" https://contate.me/deepcode">
             <img src="imagens/whatsbranco.png" alt="" height="100%" width="80%">
           </a>
         </div>
