--- a/orcamento.html
+++ b/orcamento.html
@@ -20,22 +20,22 @@
        
         <div class="left">
             <img src="imagens/fotologo.png" width="700px" height="650px" alt="">  
-            <h1>DEEP CODE</h1>          
+            <h1>ORÇAMENTO DEEP CODE</h1>          
         
     </div>
         <div class="right">
             <form action="https://formsubmit.co/Vitorhugo0031@outlook.com" method="post">
                 <div class="formu">
-                <p id="txt"><label for="">Nome:</label></p>
+                <p id="txt"><label for="">Nome</label></p>
                 <p><input type="text" name="name" required></p>
 
-                <p id="txt"><label for="">E-mail:</label></p>
+                <p id="txt"><label for="">E-mail</label></p>
                 <p><input type="email" name="email" required>  </p>
 
-                <p id="txt"><label for="">Telefone:</label></p>
+                <p id="txt"><label for="">Telefone</label></p>
                 <p><input type="tel" name="telefone" id=""></p>
 
-                <p id="txt"><label for="">Assunto:</label></p>
+                <p id="txt"><label for="">Assunto</label></p>
                 <p><input type="text" name="assunto" required></p>
                 <input type="hidden" name="_next" value="https://01vitorhugo.github.io/Deep-Code/thanks.html">
                 <button type="submit">ENVIAR</button>
