--- a/sobre.html
+++ b/sobre.html
@@ -1,70 +1,156 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="imagens/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/sobre.css">
-   
-    <title>Sobre DEEP CODE 2022</title>
+  <title>Sobre DEEP CODE 2022</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/sobre.css">
 </head>
+
 <body>
 
-      <div class="menu">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-        </ul>
-      </div>
+  <div class="nav-fixed"> 
+  <div class="menu">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+    </ul>
+  </div>
+ </div> 
 
-  
-    <div class="historia" >
-        <div class="center"> <img src="imagens/fotologo.png"  width="650px" height="600px" alt=""></div>
-        <div class="conteudo-historia">
-          <h1 id="historia">2022 O COMEÇO..</h1>
 
-          <h3>Vamos começar a falar sobre nossa logo?</h3>
-          <p class="p-top" id="historia">
-            Como pode ser observado, a nossa logo tem como imagem um iceberg e isso trás um sentido enorme para a empresa DEEP CODE.
-          </p>
-          <p id="historia">
-            Trabalhamos além do que você pode imaginar, vamos até o o fundo e não ficamos só na superfície.
-          </p>
-          <h4 id="historia">DEEP CODE uma empresa que vai além do que voce imagina.</h4>
-         </div>
+  <div class="historia">
+    <div class="center"> <img src="imagens/fotologo.png" width="650px" height="600px" alt=""></div>
+    <div class="conteudo-historia">
+      <h1 id="historia">2022 O COMEÇO</h1>
 
-         <div class="conteudo-historia2">
-          <div class="imagem-criador">
-            <img src="imagens/membro1.jpeg" alt="" height="100%" width="100%">
-          </div>
-          <div class="conteudo-criador" id="historia">
-           <p>  A história da DEEP CODE, é uma história de sucesso construída a várias mãos. Desde o início das nossas atividades,
-               nos empenhamos em gerar valor aos nossos clientes e proporcionar oportunidades e crescimento aos nossos colaboradores.
-             </p>
-
-           <p id="historia"> 
-              Além da busca incessante por gerar resultados, também priorizamos a transparência nas relações com os nossos clientes e colaboradores.
-             </p>
-
-          <p id="historia">  
-              Hoje, nosso objetivo é sermos cada vez mais uma referência de atuação para o mercado de TI. Experiência, dinamismo e flexibilidade são os alicerces da nossa vocação para levar as melhores soluções em TI para negócios de sucesso.
-             </p>
-
-            <p class="p-criador" id="historia"><i>Vitor Hugo, CEO e Fundador da empresa.</i></p>
-          </div>
-         </div>
+      <h3>Vamos começar a falar sobre nossa logo?</h3>
+      <p class="p-top" id="historia">
+        Como pode ser observado, a nossa logo tem como imagem um iceberg e isso trás um sentido enorme para a empresa
+        DEEP CODE.
+      </p>
+      <p id="historia">
+        Trabalhamos além do que você pode imaginar, vamos até  o fundo e não ficamos só na superfície.
+      </p>
+      <h4 id="historia">DEEP CODE uma empresa que vai além do que voce imagina.</h4>
     </div>
 
-   
+    <div class="conteudo-historia2">
+      <div class="imagem-criador">
+        <img src="imagens/vitor.jfif" alt="" height="100%" width="100%">
+      </div>
+      <div class="conteudo-criador" id="historia">
+        <p> A história da DEEP CODE, é uma história de sucesso construída a várias mãos. Desde o início das nossas
+          atividades,
+          nos empenhamos em gerar valor aos nossos clientes e proporcionar oportunidades e crescimento aos nossos
+          colaboradores.
+        </p>
 
-    <script src="script.js"></script>
-  
+        <p id="historia">
+          Além da busca incessante por gerar resultados, também priorizamos a transparência nas relações com os nossos
+          clientes e colaboradores.
+        </p>
+
+        <p id="historia">
+          Hoje, nosso objetivo é sermos cada vez mais uma referência de atuação para o mercado de TI. Experiência,
+          dinamismo e flexibilidade são os alicerces da nossa vocação para levar as melhores soluções em TI para
+          negócios de sucesso.
+        </p>
+
+        <p class="p-criador" id="historia"><i>Vitor Hugo, CEO e Fundador da empresa.</i></p>
+      </div>
+    </div>
+
+    <div class="equipe">
+      <h1>Equipe DEEP CODE</h1>
+    </div>
+    <div class="conteudo-membros">
+      <div id="carouselExampleDark" class="carousel carousel-dark slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="imagens/henrique.jpeg " class="d-block w-100" alt="...">
+            <div class="carousel-caption ">
+              <h5>Henrique Batista Gonzales </h5>
+              <p>Desgin.</p>
+            </div>
+          </div>
+
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="imagens/gustavo.jpeg" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
+              <h5>Gustavo Henrique Santos</h5>
+              <p>Desenvolvedor Back-End.</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="imagens/vitor.jfif" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
+              <h5>Vitor Hugo Santos</h5>
+              <p>Desenvolvedor Front-End.</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="imagens/carlos.jpg" class="d-block w-100">
+            <div class="carousel-caption">
+              <h5>Carlos Manoel</h5>
+              <p>Desgin.</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="imagens/igor.jpeg" class="d-block w-100" alt="...">
+            <div class="carousel-caption ">
+              <h5>Igor Samuel Nascimento</h5>
+              <p>Desenvolvedor Mobile.</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="imagens/breno.jpeg" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
+              <h5>Breno Guimaraes Oliveira </h5>
+              <p>Desenvolvedor Mobile.</p>
+            </div>
+          </div>
+
+          <!-- </div> -->
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
 
-    
-    
+
+
+  <script src="script.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+
+
+
+
+
 </body>
