--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           </a>
         </div>
         <div class="linkedin-icon"  id="imgs">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/vitor-hugo-9b3b63243/">
             <img src="imagens/brakedin.png" alt="" height="100%" width="80%">
           </a>
         </div>
