--- a/orcamento.html
+++ b/orcamento.html
@@ -19,7 +19,7 @@
     <div class="form-cont">
        
         <div class="left">
-            <img src="imagens/fotologo.png" width="700px" height="650px" alt="">  
+            <img src="imagens/logo_12.jpg" width="700px" height="650px" alt="">  
             <h1>ORÇAMENTO DEEP CODE</h1>          
         
     </div>
