--- a/sobre.html
+++ b/sobre.html
@@ -28,7 +28,7 @@
 
 
   <div class="historia">
-    <div class="center"> <img src="imagens/fotologo.png" width="650px" height="600px" alt=""></div>
+    <div class="center"> <img src="imagens/logo_12.jpg" width="650px" height="600px" alt=""></div>
     <div class="conteudo-historia">
       <h1 id="historia">2022 O COMEÇO</h1>
 
