ajustando menu e cores

--- a/thanks.html
+++ b/thanks.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <div class="conteudo">
-        <div class="topo"></div>
+        <div class="topo">
+            <img src="imagens/logo_12.jpg" alt="">
+        </div>
 
         <div class="baixo">
             <h1>Obrigado!</h1>
