--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -216,7 +216,7 @@ window.addEventListener('scroll', verificaScroll);
           </a>
         </div>
 
-        <div class="whats-icon"  id=" ">
+        <div class="whats-icon"  id="imgs">
           <a href="https://contate.me/deepcode">
             <img src="imagens/whatsbranco.png" alt="" height="100%" width="80%">
           </a>
