--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <ul class="navbar-nav">
             <li>
             <div class="logo-nav" id="logo-nav">
-              <img src="imagens/logo_12.jpg" alt=""> 
+              <img src="imagens/logo_12" alt=""> 
             </div>
           </li>
             <li class="nav-item">
@@ -52,21 +52,6 @@
       </div>
     </nav>
   </div>
-
-  <!-- Aparecer logo no menu -->
-  <script>
-    function verificaScroll() {
-  var elemento = document.getElementById('logo-nav');
-  var alturaJanela = window.innerHeight;
-  var alturaElemento = elemento.getBoundingClientRect().top;
-
-  if (alturaElemento < alturaJanela) {
-    elemento.classList.add('visivel');
-  }
-}
-
-window.addEventListener('scroll', verificaScroll);
-  </script>
 
   <!-- The end menu navegation -->
 
@@ -206,7 +191,7 @@ window.addEventListener('scroll', verificaScroll);
       <h3 id="contato">São Paulo (sp) - 0825300</h3>
 
       <h1 id="contato">Fale conosco</h1>
-      <h3 id="contato">CRIAR EMAIL DA EMPRESA</h3>
+      <h3 id="contato">e169acad@cps.sp.gov.br</h3>
       <h3 id="contato"><strong>tel:</strong> (11)22547627</h3>
 
       <div class="icons" id="contato"  >
