--- a/orcamento.html
+++ b/orcamento.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/orcamento.css">
+    <link rel="stylesheet" href="css/query-orcamento.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>orçamento DEEP CODE</title>
@@ -19,7 +20,7 @@
     <div class="form-cont">
        
         <div class="left">
-            <img src="imagens/logo_12.jpg" width="700px" height="650px" alt="">  
+            <img src="imagens/logo_12" width="700px" height="650px" alt="">  
             <h1>ORÇAMENTO DEEP CODE</h1>          
         
     </div>
