--- a/sobre.html
+++ b/sobre.html
@@ -98,34 +98,34 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-4">
-          <img src="../imagens/breno.jpeg" alt="">
+          <img src="imagens/breno.jpeg" alt="">
           <h3>Breno Guimarães</h3>
           <p>Desenvolvedor Mobile</p>
         </div>
         <div class="col-4">
-          <img src="../imagens/carlos.jpg" alt="">
+          <img src="imagens/carlos.jpg" alt="">
           <h3>Carlos Manoel</h3>
           <p>Design</p>
         </div>
         <div class="col-4">
-          <img src="../imagens/gustavo.jpeg" alt="">
+          <img src="imagens/gustavo.jpeg" alt="">
           <h3>Gustavo Henrique</h3>
           <p>Desenvolvedor  Back-end</p>
         </div>
       </div>
       <div class="row">
         <div class="col-4">
-          <img src="../imagens/henrique.jpeg" alt="">
+          <img src="imagens/henrique.jpeg" alt="">
           <h3>Henrique Batista</h3>
           <p>Design</p>
         </div>
         <div class="col-4">
-          <img src="../imagens/igor.jpeg" alt="">
+          <img src="imagens/igor.jpeg" alt="">
           <h3>Igor Samuel</h3>
           <p>Desenvolvedor Mobile</p>
         </div>
         <div class="col-4">
-          <img src="../imagens/vitor.jfif" alt="">
+          <img src="imagens/vitor.jfif" alt="">
           <h3>Vitor Hugo</h3>
           <p>Desenvolvedor  Front-end</p>
         </div>
