--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </figure>
         <h1 id="OqueFazemos-lista" class="dif">Como podemos te ajudar?</h1>
 
-        <h3 id="OqueFazemos-lista" class="dif"><a href="orcamento.html">fazer orçamento</a></h3>
+        <h3 id="OqueFazemos-lista" class="text"><a href="orcamento.html">fazer orçamento</a></h3>
 
       </div>
       <div class="OqueFazemos-img-direita">
